--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,17 @@
 services:
   nginx:
     image: nginx:alpine
+    container_name: nginx-proxy
+    depends_on:
+      - apache
     ports:
-      - "8080:80"
+      - "80:80"
+      - "443:443"
     volumes:
-      - ./src:/usr/share/nginx/html:ro
-    restart: unless-stopped
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./certs/fullchain.pem:/etc/ssl/certs/fullchain.pem:ro
+      - ./certs/privkey.pem:/etc/ssl/certs/privkey.pem:ro
+    command: ["nginx", "-g", "daemon off;"]
 
   apache:
     image: httpd:alpine
