updated docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,18 @@ services:
       - ./certs/privkey.pem:/etc/ssl/certs/privkey.pem:ro
     command: ["nginx", "-g", "daemon off;"]
 
-  apache:
-    image: httpd:alpine
-    ports:
-      - "8081:80"
+  flask:
+    build:
+      context: ./app
+    container_name: flask
+    environment:
+      - SECRET_KEY=${SECRET_KEY}
+      - FLASK_APP=${FLASK_APP}
+      - FLASK_DEBUG=${FLASK_DEBUG}
+      - PYTHONPATH=${PYTHONPATH}
     volumes:
-      - ./src:/usr/local/apache2/htdocs/:ro
-    restart: unless-stopped
+      - ./app:/usr/app
+    ports:
+      - "3000:80"
+    command: >
+      bash -c "flask run --host=0.0.0.0 --port=80"
